# cl

./: .gitignore  AGENTS.md  README.md  cl_tool.py  pyproject.toml
demo/: demo.cast  gen_demo.py
tests/: conftest.py  test_e2e.py  test_unit.py
tests/fixtures/: mock_claude.py  mock_claude_slow.py  mock_editor.py  mock_pmr.py
